--- a/src/styles/profilePage.css
+++ b/src/styles/profilePage.css
@@ -1,9 +1,23 @@
 .about-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     padding: 10% 15%;
+    color: grey;
 }
+
 .skills-box Button{
     border-radius: 20px;
+}
+
+.profile-image{
+    width: 20%;
+}
+
+.profile-image img{
+    width: 200px;
+    border-radius: 50%;
+}
+
+.first-box {
+    margin-right: 5%;
 }
