--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -5,41 +5,26 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    /* margin-top: 180px; */
+    margin-top: 5%;
     /* padding: 0 15%; */
     color: whitesmoke;
 } 
-
-.title h6{
-    font-size: 70px;
-    color: grey;
-    font-family: 'Sofia';
-}
-
-.navbar-list {
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-list img {
-    height: 20px;
-    object-fit:cover;
-}
 
 .homepage .profile-contact{
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-top: 8%;
+    margin-top: 5%;
 }
 
 .profile-contact a {
-    font-size: 2rem;
+    font-size: 30px;
     color: whitesmoke;
     margin: 0 2%;
 }
 
 .profile-contact .bi:hover{
-    font-size: 2rem;
+    font-size: 30px;
     color: grey;
     cursor: pointer;
 }
@@ -50,10 +35,20 @@
 
 .custom-carousel {
     width: 80%;
-    height: 300px;
+    /* height: 300px; */
 }
 
 .carousel-container {
     display: flex;
     justify-content: center;
+}
+
+/* Navbar */
+.navbar-list {
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-list img {
+    height: 20px;
+    object-fit:cover;
 }
