--- a/src/styles/resumePage.css
+++ b/src/styles/resumePage.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     text-align: center;
     padding: 5% 20%;
-    color: grey;
+    /* color: grey; */
 }
 
 .card-container {
