--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,20 @@
 @import './styles/resumePage.css';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Sofia');
 
 * {
-  font-family: "Montserrat", sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 20px;
 }
 
 body {
     background-image: url(./assets/whitebg.jpg);
     background-size: cover;
+}
+
+h4 {
+  font-family: Monstserrat;
+  font-size: 60px;
+  font-weight: bolder;
 }
