--- a/src/styles/projectsPage.css
+++ b/src/styles/projectsPage.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 50px;
-    color: grey;
+    /* font-size: 20px; */
 }
 
 .app-container {
@@ -27,4 +27,21 @@
 
 .video-container img{
     width: 100%;
+}
+
+.tech-stack img {
+    width: 15%;
+}
+
+@media screen and (max-width: 768px) {
+    .app-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .app-description {
+        width: 100%;
+    }
+    .tech-stack {
+        width: 100%;
+    }
 }
