--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@
 @import './styles/projectsPage.css';
 @import './styles/resumePage.css';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
-@import url('https://fonts.googleapis.com/css?family=Sofia');
 
 * {
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -17,7 +15,6 @@ body {
 }
 
 h4 {
-  font-family: Monstserrat;
-  font-size: 60px;
   font-weight: bolder;
+  text-decoration: underline dotted grey;
 }
