--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,31 @@ nav {
   }
 }
 
+.about__info {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: var(--mb-2-5);
+}
 
+.about__info-title {
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-semi-bold);
+  color: var(--title-color);
+}
+
+.about__info-name {
+  font-size: var(--smaller-font-size);
+}
+
+.about__info-title, .about__info-name {
+  display: block;
+  text-align: center;
+}
+
+.about__buttons {
+  display: flex;
+  justify-content: center;
+}
 /* show menu */
 .show-menu {
   bottom: 0;
@@ -303,6 +327,7 @@ nav {
   font-size: 1.25rem;
 }
 
+/*==================== BUTTONS ====================*/
 .button {
   display: inline-block;
   background-color: var(--first-color);
@@ -325,12 +350,19 @@ nav {
   display: inline-block;
   align-items: center;
 }
-/*==================== BUTTONS ====================*/
-
 
 /*==================== ABOUT ====================*/
+.about__img {
+  width: 200px;
+  border-radius: .5rem;
+  justify-self: center;
+  align-items: center;
+}
 
-
+.about__description {
+  text-align: center;
+  margin-bottom: var(--mb-2-5);
+}
 /*==================== SKILLS ====================*/
 
 
